--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1,3 +1,4 @@
+
 #error_msg{
     text-align: center;
     color: darkred;
@@ -20,9 +21,13 @@
     min-height: 38px;
     border-radius: 2px;
 }
+
 .btn {
     font-size: 15px;
     font-weight: bold;
+}
+#btnUpdate{
+    display: none;
 }
 .dropdown{
     min-height: 38px;
